--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is our Spotify hackathon file.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/index.js & python -m SimpleHTTPServer",
+    "start": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
