--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is our Spotify hackathon file.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index.js",
+    "test": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
