add body-parser and more presise static file serving

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chalk": "^1.1.1",
     "express": "^4.13.4",
     "lodash": "^4.5.0",
+    "morgan": "^1.7.0",
     "path": "^0.12.7",
     "tone": "^0.6.1"
   }
