--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   },
   "homepage": "https://github.com/apackin/SpotifyGoL#readme",
   "dependencies": {
+    "angular": "^1.5.0",
+    "angular-messages": "^1.5.0",
+    "angular-ui-router": "^0.2.18",
     "babel": "^6.5.2",
     "body-parser": "^1.15.0",
+    "bootstrap": "^3.3.6",
     "chalk": "^1.1.1",
     "express": "^4.13.4",
     "lodash": "^4.5.0",
